--- a/links-and-resources/media-studies-reference-worksheets.html
+++ b/links-and-resources/media-studies-reference-worksheets.html
@@ -37,8 +37,12 @@
 	<meta name="citation_keywords" content="online learning environment, blended learning, digital media, digital research skills, data management, reference management, data visualisation" />
 	<meta name="citation_language" content="English" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -78,7 +82,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/links-and-resources/" class="path-parent ahref-text">links-and-resources/</a>
 			&rang;
@@ -86,7 +90,7 @@
 		</p>
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
-			<a rel="internal anchor" href="#Cite" class="anchor ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Article" class="anchor ahref-text">&num;Article</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
@@ -264,52 +268,52 @@
 					<td class="td-access"></td>
 				</tr>
 				<tr class="tr-item y2020">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/asirw-2" class="ahref-text">bit.ly/asirw-2</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a><br /></span></td>
 					<td class="td-description">ASI Reference Worksheet II: Instagram Data Scraping</td>
 					<td class="td-datemodified"><span class="is-date">2020-10</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4d1;</span>Reference Worksheet</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f30d;</span>Public</mark></td>
 				</tr>
 				<tr class="tr-item y2020">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/asirw-1" class="ahref-text">bit.ly/asirw-1</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a><br /></span></td>
 					<td class="td-description">ASI Reference Worksheet I: App Store Data Scraping</td>
 					<td class="td-datemodified"><span class="is-date">2020-06</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4d8;</span>Reference Worksheet</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f30d;</span>Public</mark></td>
 				</tr>
 				<tr class="tr-item y2017">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/msrw-3">bit.ly/msrw-3</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a><br /></span></td>
 					<td class="td-description">Reference Worksheet III: Data Visualisation</td>
 					<td class="td-datemodified"><span class="is-date">2017-10</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4d8;</span>Reference Worksheet</td>
 					<td class="td-access"><span class="is-emoji">&#x1f4d8;</span>Public</td>
 				</tr>
 				<tr class="tr-item y2017">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/msrw-2">bit.ly/msrw-2</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a><br /></span></td>
 					<td class="td-description">Reference Worksheet II: Reference Management</td>
 					<td class="td-datemodified"><span class="is-date">2017-09</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4d8;</span>Reference Worksheet</td>
 					<td class="td-access"><span class="is-emoji">&#x1f4d8;</span>Public</td>
 				</tr>
 				<tr class="tr-item y2017">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/msrw-1">bit.ly/msrw-1</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://bit.ly/msrw-index" class="ahref-text">bit.ly/msrw-index</a><br /></span></td>
 					<td class="td-description">Reference Worksheet I: Data Management</td>
 					<td class="td-datemodified"><span class="is-date">2017-09</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4d8;</span>Reference Worksheet</td>
 					<td class="td-access"><span class="is-emoji">&#x1f4d8;</span>Public</td>
 				</tr>
 				<tr class="tr-item y2016">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://bit.ly/fvandervlist-digital-research-tools">bit.ly/fvandervlist-digital-research-tools</a></td>
 					<td class="td-description">List of Digital Research Tools (for New Media and Internet-Related Research)</td>
 					<td class="td-datemodified"><span class="is-date">2016-04</span></td>
@@ -323,7 +327,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -331,9 +335,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
