--- a/research/following-uvamooc-on-twitter.html
+++ b/research/following-uvamooc-on-twitter.html
@@ -17,7 +17,7 @@
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="google-site-verification" content="gdzsk-E0SNlAuJwehq3LXf3RiNIOAtsH1gjKd5AKZzQ" />
-	<link rel="canonical" href="https://www.fernandovandervlist.nl/research/following-uvamooc-on-twitter.html" />
+	<link rel="canonical" href="https://www.fernandovandervlist.nl/research/following-uvamooc-on-twitterhtml" />
 
 	<title>Following &num;UvAMOOC on Twitter &ndash; fernandovandervlist.nl</title>
 
@@ -28,8 +28,12 @@
 		Internet research, digital methods, educational technology, online learning environment, network analysis, Twitter, &#35, UvAMOOC" />
 	<meta name="author" content="F. N. van der Vlist" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -69,11 +73,11 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/research/" class="path-parent ahref-text">research/</a>
 			&rang;
-			<a rel="internal" href="/research/following-uvamooc-on-twitter.html" class="path ahref-text">following-uvamooc-on-twitter.html</a>
+			<a rel="internal" href="/research/following-uvamooc-on-twitterhtml" class="path ahref-text">following-uvamooc-on-twitterhtml</a>
 		</p>
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
@@ -88,7 +92,7 @@
 			<h5 class="byline">
 				<span class="byline-kind"><span class="is-emoji">&#x1f4c4;</span>Working Paper</span>
 			</h5>
-			<h1><b>Following <a rel="external" target="_blank" href="https://twitter.com/hashtag/UvAMOOC">&num;UvAMOOC</a> on Twitter</b><span class="h1-subtitle">:<br />
+			<h1><b>Following <a rel="external" target="_blank" href="https://twittercom/hashtag/UvAMOOC">&num;UvAMOOC</a> on Twitter</b><span class="h1-subtitle">:<br />
 				A Network Analysis of a Massive Socio-Technical and Cross-Platform Online Learning Environment</span></h1>
 			<hr class="dashed" />
 			<h6 class="byline">
@@ -102,7 +106,7 @@
 				<span class="byline-in"><span class="is-emoji">&#x1f3e2;</span>University of Amsterdam</span>
 			</h6>
 			<hr class="dashed" />
-			<p class="summary"><span class="is-topic"><span class="is-emoji">&#x1f4c2;</span>Social Media and Platformed Education</span> In this article, we argue for a conceptualisation of MOOCs as socio-technical and cross-platform learning environments. We explore different competing visions and expectations of a contested space, and observe the kind of actors that are actually attracted by these visions and expectations to grasp what kind of learning environment these actors help constitute. To do this, we trace <i>distance learning</i> and <i>interactivity</i> as two initially separate historical and conceptual lineages of contemporary educational technology, and paid careful attention to the particular visions of learning these technologies carry with them. We argue that MOOCs build on Web 2.0 as a platform (O&rsquo;Reilly 2005) as well as on online social networks to conjure up a <i>specific</i> socio-technical learning environment. We specifically focus our attention on Twitter, and how this microblogging platform is deployed as part of massive online learning environments. To operationalise this research, we have devised an outline for an analytical framework for &lsquo;following Twitter&rsquo;, both as medium and as a network of actors (Latour [2005] 2007). This framework would not just render productive particular issues such as uncertainties and instabilities with which we are presented, but also allow us to &lsquo;put ahead of us&rsquo; that which we want to study. Consequently, it enabled us to do a network analysis and describe what is <i>actually happening</i> inside the &lsquo;data-space&rsquo; as it has been captured by the DMI-TCAT, a device we deploy to &lsquo;follow the medium&rsquo; (Rogers 2009) in our acquisition of Twitter data. Ultimately, we debunk some of the idealised visions and inflated expectations following from Web 2.0 &lsquo;possibility thinking&rsquo; in the case of our pilot study of UvAMOOC on Twitter. This pilot study then caused us to reconsider the concept of &lsquo;context collapse&rsquo; (Marwick and boyd 2010) and the co-existence of a range of actors involved to different degrees within the same &lsquo;data-space&rsquo;.</p>
+			<p class="summary"><span class="is-topic"><span class="is-emoji">&#x1f4c2;</span>Social Media and Platformed Education</span> In this article, we argue for a conceptualisation of MOOCs as socio-technical and cross-platform learning environments. We explore different competing visions and expectations of a contested space, and observe the kind of actors that are actually attracted by these visions and expectations to grasp what kind of learning environment these actors help constitute. To do this, we trace <i>distance learning</i> and <i>interactivity</i> as two initially separate historical and conceptual lineages of contemporary educational technology, and paid careful attention to the particular visions of learning these technologies carry with them. We argue that MOOCs build on Web 2.0 as a platform (O&rsquo;Reilly 2005) as well as on online social networks to conjure up a <i>specific</i> socio-technical learning environment. We specifically focus our attention on Twitter, and how this microblogging platform is deployed as part of massive online learning environments. To operationalise this research, we have devised an outline for an analytical framework for &lsquo;following Twitter&rsquo;, both as medium and as a network of actors (Latour [2005] 2007). This framework would not just render productive particular issues such as uncertainties and instabilities with which we are presented, but also allow us to &lsquo;put ahead of us&rsquo; that which we want to study. Consequently, it enabled us to do a network analysis and describe what is <i>actually happening</i> inside the &lsquo;data-space&rsquo; as it has been captured by the DMI-TCAT, a device we deploy to &lsquo;follow the medium&rsquo; (Rogers 2009) in our acquisition of Twitter data. Ultimately, we debunk some of the idealised visions and inflated expectations following from Web 2.0 &lsquo;possibility thinking&rsquo; in the case of our pilot study of UvAMOOC on twitter This pilot study then caused us to reconsider the concept of &lsquo;context collapse&rsquo; (Marwick and boyd 2010) and the co-existence of a range of actors involved to different degrees within the same &lsquo;data-space&rsquo;.</p>
 			<p class="keywords">
 				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=Internet+research">Internet research</a></span>
 				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=digital+methods">digital methods</a></span>
@@ -110,7 +114,7 @@
 				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=online+learning+environment">online learning environment</a></span>
 				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=network+analysis">network analysis</a></span>
 				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=Twitter">Twitter</a></span>
-				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=%23UvAMOOC"><a rel="external" target="_blank" href="https://twitter.com/hashtag/UvAMOOC">&num;UvAMOOC</a></a></span>
+				<span class="article-keywords"><span class="is-emoji">&#x1f3f7;</span><a rel="external tag" target="_blank" href="https://scholar.google.com/scholar?q=%23UvAMOOC"><a rel="external" target="_blank" href="https://twittercom/hashtag/UvAMOOC">&num;UvAMOOC</a></a></span>
 			</p>
 		<hr class="solid" />
 		</section>
@@ -166,7 +170,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -174,9 +178,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
