--- a/research/super-appification.html
+++ b/research/super-appification.html
@@ -51,8 +51,12 @@
 	<meta name="citation_fulltext_html_url" content="https://journals.sagepub.com/doi/full/10.1177/14614448231223419" />
 	<meta name="citation_pdf_url" content="https://journals.sagepub.com/doi/pdf/10.1177/14614448231223419" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -92,7 +96,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/research/" class="path-parent ahref-text">research/</a>
 			&rang;
@@ -101,7 +105,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -268,27 +272,27 @@
 					<td class="td-access"></td>
 				</tr>
 				<tr class="tr-item y2023">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://spir.aoir.org/ojs/index.php/spir/article/view/13509" class="ahref-text">spir.aoir.org</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.5210/spir.v2023i0.13509" class="ahref-uri">10.5210/spir.v2023i0.13509</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2162-3317/" class="ahref-uri">2162-3317</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/professor-jose-van-dijck" class="ahref-text">SPI.2021.001</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/viveni191c048" class="ahref-text">VI.Veni.191C.048</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/14614448231223419" class="ahref-uri">10.1177/14614448231223419</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/14614448231223419" class="ahref-uri">10.1177/14614448231223419</a><br /></span></td>
 					<td class="td-description">Super-Appification</td>
 					<td class="td-datemodified"><span class="is-date">2023-12-31</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2023">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://osf.io/fetps/" class="ahref-text">osf.io/fetps/</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/fetps" class="ahref-uri">10.17605/osf.io/fetps</a><br />
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/14614448231223419" class="ahref-uri">10.1177/14614448231223419</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/professor-jose-van-dijck" class="ahref-text">SPI.2021.001</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/viveni191c048" class="ahref-text">VI.Veni.191C.048</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/viveni191c048" class="ahref-text">VI.Veni.191C.048</a><br /></span></td>
 					<td class="td-description"><i>Global &lsquo;Super-App&rsquo; Landscape</i></td>
 					<td class="td-datemodified"><span class="is-date">2023-06-01</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f5c4;</span>Research Data</td>
@@ -301,14 +305,14 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/6cj5x" class="ahref-uri">10.17605/osf.io/6cj5x</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> URL: <a rel="external" target="_blank" href="https://www.zotero.org/groups/4676709/the_platform_as_ecosystem" class="ahref-text">zotero.org</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=10443991471624158613" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=10443991471624158613" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-platform-as-ecosystem.html" class="path ahref-text"><i>The Platform as Ecosystem</i></a></td>
 					<td class="td-datemodified"><span class="is-date">2022-09-16</span></td>
-					<td class="td-kind"><span class="is-emoji" title="&#x1f393; Degree">&#x1f393; &#x1f4d7; &#x1f50d;</span>Thesis</td>
+					<td class="td-kind"><span class="is-emoji" title="&#x1f393; Degree">&#x1f393; &#x1f4d7; &#x1f50d;</span>Thesis &boxv; <span class="is-emoji" title="&#x1f4dc; Nominated"><a rel="internal" href="/about.html#Accomplishments-Awards-Honours" class="anchor ahref-emoji">&#x1f4dc;</a></span><span class="is-emoji" title="&#x1f4dc; Nominated"><a rel="internal" href="/about.html#Accomplishments-Awards-Honours" class="anchor ahref-emoji">&#x1f4dc;</a></span></td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f30d;</span>Public</mark></td>
 				</tr>
 				<tr class="tr-item y2022">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://wiki.digitalmethods.net/Dmi/SummerSchool2022EvolutionofSuperApps" class="ahref-text">wiki.digitalmethods.net</a></td>
 					<td class="td-description">The Evolution of Super Apps</td>
 					<td class="td-datemodified"><span class="is-date">2022-07</span></td>
@@ -324,18 +328,18 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> URL: <a rel="external" target="_blank" href="https://www.cais.nrw/arbeitsgemeinschaften/data-sharing-troubles/" class="ahref-text">cais.nrw</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8908939559690776161" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8908939559690776161" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/api-governance.html" class="path ahref-text">API Governance</a></td>
 					<td class="td-datemodified"><span class="is-date">2022-05-07</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2021 tr-istype-pinned">
-					<td class="td-icon"></td>
+					<td class="td-icon"><span class="is-emoji">&#x1f4cc;</span></td>
 					<td class="td-link"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text">seeing-the-forest-for-the-trees.html</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/1461444820940293" class="ahref-uri">10.1177/1461444820940293</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-4448" class="ahref-uri">1461-4448</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text"><i>Seeing the Forest for the Trees</i> Diagrams</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-09</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4ca;</span>Infographics</td>
@@ -353,7 +357,7 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/viveni191c048" class="ahref-text">VI.Veni.191C.048</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14707157820293689801" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14707157820293689801" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/pandemic-platform-governance.html" class="path ahref-text">Pandemic Platform Governance</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-08-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -371,7 +375,7 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/20563051221086228" class="ahref-uri">10.1177/20563051221086228</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3901627134367855950,16895441289677319109" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3901627134367855950,16895441289677319109" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-technicity-of-platform-governance.html" class="path ahref-text">The Technicity of Platform Governance</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-07-23</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4;</span>Working Paper</td>
@@ -385,7 +389,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2047-2390" class="ahref-uri">2047-2390</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14474065947956693808,99362883797132208" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14474065947956693808,99362883797132208" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/apps-and-infrastructures-a-research-agenda.html" class="path ahref-text">Apps and Infrastructures &ndash; A Research Agenda</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-10-21</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4; &#x1f4d7;</span>Issue Editorial</td>
@@ -397,7 +401,7 @@
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.5210/spir.v6i0.8431" class="ahref-uri">10.5210/spir.v6i0.8431</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2162-3317/" class="ahref-uri">2162-3317</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/app-studies-conference-panel.html" class="path ahref-text">App Studies (Conference Panel)</a></td>
 					<td class="td-datemodified"><span class="is-date">2016-10-31</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -410,7 +414,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -418,9 +422,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
