--- a/research/the-technicity-of-platform-governance.html
+++ b/research/the-technicity-of-platform-governance.html
@@ -48,8 +48,12 @@
 	<meta name="citation_abstract_html_url" content="https://dspace.ub.uni-siegen.de/handle/ubsi/1938" />
 	<meta name="citation_pdf_url" content="https://dspace.ub.uni-siegen.de/bitstream/ubsi/1341/1/Store_interface_package_connection.pdf" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -89,7 +93,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/research/" class="path-parent ahref-text">research/</a>
 			&rang;
@@ -98,7 +102,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -254,11 +258,11 @@
 					<td class="td-access"></td>
 				</tr>
 				<tr class="tr-item y2021 tr-istype-pinned">
-					<td class="td-icon"></td>
+					<td class="td-icon"><span class="is-emoji">&#x1f4cc;</span></td>
 					<td class="td-link"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text">seeing-the-forest-for-the-trees.html</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/1461444820940293" class="ahref-uri">10.1177/1461444820940293</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-4448" class="ahref-uri">1461-4448</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text"><i>Seeing the Forest for the Trees</i> Diagrams</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-09</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4ca;</span>Infographics</td>
@@ -268,33 +272,33 @@
 					<td class="td-icon"></td>
 					<td class="td-link"><a rel="internal" href="/research/platform-and-app-histories.html" class="path ahref-text">platform-and-app-histories.html</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.1007/978-3-030-63291-5_16" class="ahref-uri">10.1007/978-3-030-63291-5_16</a><br />
+						<span class="td-link-expands">&boxvr; <i>Part of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1007/978-3-030-63291-5/" class="ahref-uri">10.1007/978-3-030-63291-5</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/9783030632905/" class="ahref-uri">978-3-030-63290-5</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/9783030632915/" class="ahref-uri">978-3-030-63291-5</a><br /></span>
-						<span class="td-link-expands">&boxvr; <i>Part of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1007/978-3-030-63291-5/" class="ahref-uri">10.1007/978-3-030-63291-5</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12574962342012756774" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12574962342012756774" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/platform-and-app-histories.html" class="path ahref-text">Platform and App Histories</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-07-01</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4; &#x1f4d7;</span>Book Section</td>
 					<td class="td-access"><span class="is-emoji">&#x1f512;</span>Closed</td>
 				</tr>
 				<tr class="tr-item y2021">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://osf.io/wfxyp/" class="ahref-text">osf.io/wfxyp/</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/wfxyp" class="ahref-uri">10.17605/osf.io/wfxyp</a><br />
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/20563051221086228" class="ahref-uri">10.1177/20563051221086228</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.25819/ubsi/9951" class="ahref-uri">10.25819/ubsi/9951</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> URL: <a rel="external" target="_blank" href="https://www.cais.nrw/arbeitsgemeinschaften/data-sharing-troubles/" class="ahref-text">cais.nrw</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span></td>
 					<td class="td-description"><i>Historical Facebook Platform &lsquo;Boundary Resources&rsquo; for Application Development, 2006&ndash;2020</i></td>
 					<td class="td-datemodified"><span class="is-date">2021-06-12</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f5c4;</span>Research Data</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2020">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://spir.aoir.org/ojs/index.php/spir/article/view/11185" class="ahref-text">spir.aoir.org</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.5210/spir.v2020i0.11185" class="ahref-uri">10.5210/spir.v2020i0.11185</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2162-3317/" class="ahref-uri">2162-3317</a><br /></span>
@@ -302,7 +306,7 @@
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.25819/ubsi/9951" class="ahref-uri">10.25819/ubsi/9951</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=16223468019386205245" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=16223468019386205245" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description">The Evolution of Facebook&rsquo;s Graph API</td>
 					<td class="td-datemodified"><span class="is-date">2020-10-05</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -311,7 +315,7 @@
 				<tr class="tr-item y2020">
 					<td class="td-icon"><span class="is-emoji">&#x1f4cc;</span></td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://tools.digitalmethodologies.center/" class="ahref-text">tools.digitalmethodologies.center</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://digitalmethodologies.center/" class="ahref-text">digitalmethodologies.center</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://digitalmethodologies.center/" class="ahref-text">digitalmethodologies.center</a><br /></span></td>
 					<td class="td-description"><i>Center for Digital Methodologies Tools</i></td>
 					<td class="td-datemodified"><span class="is-date">2020-01</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f527;</span>Research Tools</td>
@@ -325,7 +329,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2213-7653" class="ahref-uri">2213-7653</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=3994747132579416724" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/social-media-and-platform-historiography.html" class="path ahref-text">Social Media and Platform Historiography</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-11-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -340,19 +344,19 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/facebooks-evolution.html" class="path ahref-text">Facebook&rsquo;s Evolution</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-05-01</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2018">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://osf.io/47zyc/" class="ahref-text">osf.io/47zyc/</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br />
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span></td>
 					<td class="td-description"><i>Historical Facebook Platform &lsquo;Boundary Resources&rsquo;, 2006&ndash;2018</i></td>
 					<td class="td-datemodified"><span class="is-date">2018-12-07</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f5c4;</span>Research Data</td>
@@ -366,7 +370,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-political-economy-of-social-data.html" class="path ahref-text">The Political Economy of Social Data</a></td>
 					<td class="td-datemodified"><span class="is-date">2017-07-28</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -379,7 +383,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -387,9 +391,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
