--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,23 @@
 	<title>Contact &ndash; fernandovandervlist.nl</title>
 
 	<meta name="title" content="Contact &ndash; fernandovandervlist.nl" />
-	<meta name="description" content="Fernando van der Vlist, PhD, is Assistant Professor of Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, the Netherlands, and programme coordinator of the Master&rsquo;s Cultural Data &amp; AI. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
+	<meta name="description" content="Fernando van der Vlist, PhD, is a researcher, writer, graphic designer, and educator specialising in digital media and technology. He is Assistant Professor and programme coordinator for the Master&rsquo;s Cultural Data &amp; AI in the Department of Media Studies at the University of Amsterdam, Netherlands. His research focuses on the critical study of digital platforms and apps, their ecosystems, data, and artificial intelligence (AI) in culture and society." />
 	<meta name="keywords" content="
 		University of Amsterdam (UvA), Media Studies, Humanities, Amsterdam School for Cultural Analysis (ASCA), Amsterdam Institute for Humanities Research (AIHR), 
 		App Studies Initiative (ASI), Digital Methods Initiative (DMI), Public Data Lab, 
-		Media Studies, Archival Information and Digital Humanities, New Media and Digital Culture, Media and Culture Studies, Graphic Design, 
+		Media Studies, Critical Data and Artificial Intelligence, Archival Information and Digital Humanities, New Media and Digital Culture, Media and Culture Studies, Graphic Design, 
 		Utrecht University (UU), Focus Area &lsquo;Governing the Digital Society&rsquo; (GDS), University of Siegen (Uni-Siegen), DFG Collaborative Research Centre 1187 &lsquo;Media of Cooperation&rsquo; (DFG SFB 1187), Utrecht Data School (UDS), Mind Design, The World as Flatland, Willem de Kooning Academy (WdKA), Rotterdam University of Applied Sciences (RUAS), 
 		Association of Internet Researchers (AoIR), International Communication Association (ICA), Society for Social Studies of Science (4S), Research School for Media Studies (RMeS), Insitute for Cultural Analysis (ICON), 
 		internet studies, platform studies, app studies, digital methods, software studies, critical data studies, artificial intelligence (AI), social media, web history, platformisation, platform ecosystems, controversy mapping, 
 		information design, information graphics, information visualisation, visual journalism, visual systems" />
 	<meta name="author" content="F. N. van der Vlist" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -74,14 +78,14 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/contact.html" class="path ahref-text">contact.html</a>
 		</p>
 		<p class="header-anchors">
-			<a rel="internal anchor" href="#Card" class="anchor ahref-text">&num;Card</a>
+			<a rel="internal anchor" href="#Card" class="anchor anchor-is-reference ahref-text">&num;Card</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#External-Links" class="anchor ahref-text">&num;External-Links</a>
+			<a rel="internal anchor" href="#External-Links" class="anchor anchor-is-reference ahref-text">&num;External-Links</a>
 		</p>
 		<hr class="solid" />
 	</header>
@@ -94,16 +98,16 @@
 			<h3 class="istype-reference"><span class="is-emoji">&#x1f464; &#x1f4c7;</span><mark class="is-author">Dr. F.&hairsp;N. (Fernando) <b>van der Vlist</b></mark></h3>
 			<table>
 				<tr>
-					<th>Title</th>
-					<td id="Card-Title" onclick="copyEvent('Card-Title')" title="Click to copy job title to clipboard."><a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-url">Assistant Professor</a></td>
-				</tr>
-				<tr>
 					<th><span class="is-emoji">&#x1f3e2;</span>Organisation</th>
 					<td id="Card-Workplace" onclick="copyEvent('Card-Workplace')" title="Click to copy workplace to clipboard.">University of Amsterdam &middot; Department of Media Studies, Faculty of Humanities</td>
 				</tr>
 				<tr>
+					<th>Title</th>
+					<td id="Card-Title" onclick="copyEvent('Card-Title')" title="Click to copy job title to clipboard."><a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-url">Assistant Professor &middot; Coordinator Master’s Cultural Data & AI</a></td>
+				</tr>
+				<tr>
 					<th><span class="is-emoji">&#x1f4ee;</span>Work Address</th>
-					<td id="Card-WorkAddress" onclick="copyEvent('Card-WorkAddress')" title="Click to copy work address handle to clipboard."><a rel="external author" target="_blank" href="https://goo.gl/maps/sNgunWvbovMCrmdD7" class="ahref-url">BG1 &ndash; University of Amsterdam &middot; Turfdraagsterpad 9, 1012 XT Amsterdam, Netherlands</a></td>
+					<td id="Card-WorkAddress" onclick="copyEvent('Card-WorkAddress')" title="Click to copy work address to clipboard."><a rel="external author" target="_blank" href="https://goo.gl/maps/sNgunWvbovMCrmdD7" class="ahref-url">BG1 &ndash; University of Amsterdam &middot; Turfdraagsterpad 9, 1012 XT Amsterdam, Netherlands</a></td>
 				</tr>
 				<tr>
 					<th><span class="is-emoji">&#x1f4e7;</span>Email</th>
@@ -117,7 +121,7 @@
 				</tr>
 				<tr>
 					<th><span class="is-emoji">&#x1d54f;</span>(Twitter)</th>
-					<td id="Card-Twitter" onclick="copyEvent('Card-Twitter')" title="Click to copy Twitter handle to clipboard."><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#64;fvandervlist</a></td>
+					<td id="Card-Twitter" onclick="copyEvent('Card-Twitter')" title="Click to copy &#x1d54f; (Twitter) handle to clipboard."><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#64;fvandervlist</a></td>
 				</tr>
 			</table>
 		<hr class="solid" />
@@ -125,12 +129,10 @@
 		<section class="gallery is-author" id="Gallery" title="Click and hold in the image to zoom in.">
 			<img src="/Resources/images/fvandervlist/fvandervlist-phd-defence-ceremony%3Fmode%3Drgb%26w%3D720%26h%3D540%26res%3D72%26date%3D20220916.jpg" class="y2022" />
 			<img src="/Resources/images/fvandervlist/fvandervlist%3Fmode%3Drgb%26w%3D720%26h%3D720%26res%3D150%26date%3D20220206.jpg" class="y2022" />
-			<img src="/Resources/images/fvandervlist/fvandervlist%3Fmode%3Drgb%26w%3D720%26h%3D720%26res%3D150%26date%3D20160529.jpg" class="y2016 is-hidden" />
-			<img src="/Resources/images/fvandervlist/fvandervlist%3Fmode%3Drgb%26w%3D720%26h%3D720%26res%3D150%26date%3D20150919.jpg" class="y2015 is-hidden" />
 		<hr class="solid" />
 		</section>
 		<section id="External-Links">
-			<h1>External Links</h1>
+			<h1><span class="is-emoji">&#x1f517;</span>External Links</h1>
 			<ul>
 				<li><a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">Staff Profile (University of Amsterdam)</a></li>
 				<li><a rel="external author" target="_blank" href="https://appstudies.org/" class="ahref-text">App Studies Initiative</a></li>
@@ -141,14 +143,15 @@
 				<li><a rel="external author" target="_blank" href="https://digitalmethodologies.center/" class="ahref-text">Center for Digital Methodologies (University of Siegen)</a></li>
 				<li><a rel="external author" target="_blank" href="https://dataschool.nl/" class="ahref-text">Utrecht Data School (Utrecht University)</a></li>
 			</ul>
-			<h3>Social Links</h3>
-			<ul>
+			<h3><span class="is-emoji">&#x1f30c;</span>Social Links</h3>
+			<ul>						
 				<li><a rel="external author" target="_blank" href="https://x.com/fvandervlist" class="ahref-text">&#x1d54f; (Twitter)</a></li>
 				<li><a rel="external author" target="_blank" href="https://uva.academia.edu/fvandervlist" class="ahref-text">Academia</a></li>
+				<li><a rel="external author" target="_blank" href="https://bsky.app/profile/fvandervlist.bsky.social" class="ahref-text">Bluesky</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.fb.com/fernando.vandervlist" class="ahref-text">Facebook</a></li>
 				<li><a rel="external author" target="_blank" href="https://github.com/fvandervlist" class="ahref-text">GitHub</a></li>
 				<li><a rel="external author" target="_blank" href="https://scholar.google.com/citations?user=vFkliXsAAAAJ" class="ahref-text">Google Scholar</a></li>
-				<li><a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist" class="ahref-text">LinkedIn</a></li>
+				<li><a rel="external author" target="_blank" href="https://www.linkedin.com/in/fvandervlist/" class="ahref-text">LinkedIn</a></li>
 				<li><a rel="external author" target="_blank" href="https://aoir.social/@fvandervlist" class="ahref-text">Mastodon</a></li>
 				<li><a rel="external author" target="_blank" href="https://www.threads.net/@fvandervlist" class="ahref-text">Threads</a></li>
 				<li><a rel="external author" target="_blank" href="https://osf.io/m6dt9/" class="ahref-text">Open Science Framework</a></li>
@@ -186,7 +189,7 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> ORCID ID: <a rel="external author" target="_blank" href="https://orcid.org/0000-0003-1401-0325" class="ahref-text">0000-0003-1401-0325</a><br /></span>
 						<span class="td-link-expands">&boxur; <i>Linked to</i> Staff Profile: <a rel="external author" target="_blank" href="https://www.uva.nl/en/profile/f.n.vandervlist/" class="ahref-text">uva.nl/en/profile/f.n.vandervlist/</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/about.html" class="path ahref-text">About</a></td>
-					<td class="td-datemodified"><span class="is-date">2024-06-15</span></td>
+					<td class="td-datemodified"><span class="is-date">2024-11-12</span></td>
 					<td class="td-kind"></td>
 					<td class="td-access"></td>
 				</tr>
@@ -229,7 +232,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -237,9 +240,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
@@ -253,7 +263,7 @@
 			</span>
 			&boxv;
 			<span class="legend-field">Last modified:</span>
-			<span class="is-emoji">&#x1f553;</span><span class="is-date">June 15, 2024</span>
+			<span class="is-emoji">&#x1f553;</span><span class="is-date">November 12, 2024</span>
 		</p>
 	</footer>
 
