--- a/design/de-platformsamenleving.html
+++ b/design/de-platformsamenleving.html
@@ -28,8 +28,12 @@
 		social media, policy, platforms, sharing economy" />
 	<meta name="author" content="J. F. T. M. van Dijck; T. Poell; B. G. M. de Waal; F. N. van der Vlist" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -69,7 +73,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/design/" class="path-parent ahref-text">design/</a>
 			&rang;
@@ -201,11 +205,11 @@
 					<td class="td-access"></td>
 				</tr>
 				<tr class="tr-item y2021 tr-istype-pinned">
-					<td class="td-icon"></td>
+					<td class="td-icon"><span class="is-emoji">&#x1f4cc;</span></td>
 					<td class="td-link"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text">seeing-the-forest-for-the-trees.html</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/1461444820940293" class="ahref-uri">10.1177/1461444820940293</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-4448" class="ahref-uri">1461-4448</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/1461-7315" class="ahref-uri">1461-7315</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/seeing-the-forest-for-the-trees.html" class="path ahref-text"><i>Seeing the Forest for the Trees</i> Diagrams</a></td>
 					<td class="td-datemodified"><span class="is-date">2021-09</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4ca;</span>Infographics</td>
@@ -216,7 +220,7 @@
 					<td class="td-link"><a rel="internal" href="/design/the-platform-society.html" class="path ahref-text">the-platform-society.html</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.1093/oso/9780190889760.001.0001" class="ahref-uri">10.1093/oso/9780190889760.001.0001</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889760/" class="ahref-uri">978-0190889760</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889777/" class="ahref-uri">978-0190889777</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889777/" class="ahref-uri">978-0190889777</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/the-platform-society.html" class="path ahref-text"><i>The Platform Society</i> Diagrams</a></td>
 					<td class="td-datemodified"><span class="is-date">2018-11-02</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4ca;</span>Infographics</td>
@@ -229,7 +233,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -237,9 +241,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
