--- a/research/digital-methods-for-sensory-media-research.html
+++ b/research/digital-methods-for-sensory-media-research.html
@@ -51,8 +51,12 @@
 	<meta name="citation_fulltext_html_url" content="https://journals.sagepub.com/doi/full/10.1177/13548565241226791" />
 	<meta name="citation_pdf_url" content="https://journals.sagepub.com/doi/pdf/10.1177/13548565241226791" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -92,7 +96,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/research/" class="path-parent ahref-text">research/</a>
 			&rang;
@@ -101,7 +105,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -261,7 +265,7 @@
 				<tr class="tr-item y2020 tr-istype-pinned">
 					<td class="td-icon"><span class="is-emoji">&#x1f4cc;</span></td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://appstudies.org/research-output/tools/" class="ahref-text">appstudies.org/tools</a><br />
-						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://appstudies.org/" class="ahref-text">appstudies.org</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> URL: <a rel="external" target="_blank" href="https://appstudies.org/" class="ahref-text">appstudies.org</a><br /></span></td>
 					<td class="td-description"><i>ASI Tools</i></td>
 					<td class="td-datemodified"><span class="is-date nd">2020-06</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f527;</span>Research Tools</td>
@@ -275,14 +279,14 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2047-2390" class="ahref-uri">2047-2390</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14474065947956693808,99362883797132208" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=14474065947956693808,99362883797132208" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/apps-and-infrastructures-a-research-agenda.html" class="path ahref-text">Apps and Infrastructures &ndash; A Research Agenda</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-10-21</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4; &#x1f4d7;</span>Issue Editorial</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2019">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://wiki.digitalmethods.net/Dmi/SummerSchool2019ResearchPersonaAsDigitalMethod" class="ahref-text">wiki.digitalmethods.net</a></td>
 					<td class="td-description">Research Persona as Digital Method</td>
 					<td class="td-datemodified"><span class="is-date">2019-07</span></td>
@@ -296,7 +300,7 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2056-3051" class="ahref-uri">2056-3051</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=661033894932760775" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=661033894932760775" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/multi-situated-app-studies.html" class="path ahref-text">Multi-Situated App Studies</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-06-06</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
@@ -311,14 +315,14 @@
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2567-2517/" class="ahref-uri">2567-2517</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/2056305119846486" class="ahref-uri">10.1177/2056305119846486</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1177/2056305119846486" class="ahref-uri">10.1177/2056305119846486</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/store-interface-package-connection.html" class="path ahref-text">Store, Interface, Package, Connection</a></td>
 					<td class="td-datemodified"><span class="is-date">2018-08-30</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4c4;</span>Working Paper</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2018">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://wiki.digitalmethods.net/Dmi/WinterSchool2018MappingDataIntensiveAppInfrastructures" class="ahref-text">wiki.digitalmethods.net</a></td>
 					<td class="td-description">Mapping Data-Intensive App Infrastructures</td>
 					<td class="td-datemodified"><span class="is-date">2018-01</span></td>
@@ -331,7 +335,7 @@
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.5210/spir.v6i0.8431" class="ahref-uri">10.5210/spir.v6i0.8431</a><br />
 						<span class="td-link-expands">&boxvr; <i>Part of</i> e-ISSN: <a rel="external" target="_blank" href="https://portal.issn.org/resource/ISSN/2162-3317/" class="ahref-uri">2162-3317</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=11703184730133935,11948690153081333579" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/app-studies-conference-panel.html" class="path ahref-text">App Studies (Conference Panel)</a></td>
 					<td class="td-datemodified"><span class="is-date">2016-10-31</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
@@ -344,7 +348,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -352,9 +356,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
