--- a/research/social-media-and-platform-historiography.html
+++ b/research/social-media-and-platform-historiography.html
@@ -49,8 +49,12 @@
 	<meta name="citation_fulltext_html_url" content="https://www.tmgonline.nl/article/10.18146/tmg.434/" />
 	<meta name="citation_pdf_url" content="https://www.tmgonline.nl/articles/10.18146/tmg.434/galley/579/download/" />
 
+	<!-- HTML base tag -->
+	<base href="https://www.fernandovandervlist.nl/" />
+
 	<!-- external resource link tags -->
-	<link rel="stylesheet" type="text/css" href="/Resources/css/styles.css" />
+	<link id="light-theme"rel="stylesheet" type="text/css" href="/Resources/css/styles-light.css" media="(prefers-color-scheme: light)" />
+	<link id="dark-theme" rel="stylesheet" type="text/css" href="/Resources/css/styles-dark.css" media="(prefers-color-scheme: dark)" />
 	<link rel="alternate" type="application/rss+xml" title="Feed of / &ndash; fernandovandervlist.nl" href="https://www.fernandovandervlist.nl/Resources/feed.xml" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/Resources/favicon/favicon-32x32.png">
@@ -90,7 +94,7 @@
 
 	<header>
 		<p class="header-path">
-			<a rel="author" href="https://www.fernandovandervlist.nl/" class="path path-root">fernandovandervlist.nl/</a>
+			<a rel="author" href="/" class="path path-root">fernandovandervlist.nl/</a>
 			&rang;
 			<a rel="internal" href="/research/" class="path-parent ahref-text">research/</a>
 			&rang;
@@ -99,7 +103,7 @@
 		<p class="header-anchors">
 			<a rel="internal anchor" href="#Summary" class="anchor ahref-text">&num;Summary</a>
 			<a rel="internal anchor" href="#Gallery" class="anchor ahref-text">&num;Gallery</a>
-			<a rel="internal anchor" href="#Cite" class="anchor ahref-text">&num;Cite</a>
+			<a rel="internal anchor" href="#Cite" class="anchor anchor-is-reference ahref-text">&num;Cite</a>
 			<a rel="internal anchor" href="#Info" class="anchor ahref-text">&num;Info</a>
 			<a rel="internal anchor" href="#Relations" class="anchor ahref-text">&num;Relations</a>
 		</p>
@@ -258,7 +262,7 @@
 					<td class="td-access"></td>
 				</tr>
 				<tr class="tr-item y2019">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://wiki.digitalmethods.net/Dmi/SummerSchool2019AppStorePolicyHistories" class="ahref-text">wiki.digitalmethods.net</a></td>
 					<td class="td-description">App (Store) Policy Histories</td>
 					<td class="td-datemodified"><span class="is-date">2019-07</span></td>
@@ -274,28 +278,28 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=8650465290621024981,8317138454142521878" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/facebooks-evolution.html" class="path ahref-text">Facebook&rsquo;s Evolution</a></td>
 					<td class="td-datemodified"><span class="is-date">2019-05-01</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Research Article</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f513;</span>Open Access</mark></td>
 				</tr>
 				<tr class="tr-item y2019">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://wiki.digitalmethods.net/Dmi/WinterSchool2019AppsStories" class="ahref-text">wiki.digitalmethods.net</a><br />
-						<span class="td-link-expands">&boxur; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/t29g8" class="ahref-uri">10.17605/osf.io/t29g8</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/t29g8" class="ahref-uri">10.17605/osf.io/t29g8</a><br /></span></td>
 					<td class="td-description">Apps and Their Stories</td>
 					<td class="td-datemodified"><span class="is-date">2019-01</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4dd;</span>Web Report</td>
 					<td class="td-access"><mark class="is-feature"><span class="is-emoji">&#x1f30d;</span>Public</mark></td>
 				</tr>
 				<tr class="tr-item y2018">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="https://osf.io/47zyc/" class="ahref-text">osf.io/47zyc/</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br />
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://www.nwo.nl/en/projects/275-45-009" class="ahref-uri">275-45-009</a><br /></span></td>
 					<td class="td-description"><i>Historical Facebook Platform &lsquo;Boundary Resources&rsquo;, 2006&ndash;2018</i></td>
 					<td class="td-datemodified"><span class="is-date">2018-12-07</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f5c4;</span>Research Data</td>
@@ -306,7 +310,7 @@
 					<td class="td-link"><a rel="internal" href="/design/the-platform-society.html" class="path ahref-text">the-platform-society.html</a><br />
 						&boxvr; DOI: <a rel="external" target="_blank" href="https://doi.org/10.1093/oso/9780190889760.001.0001" class="ahref-uri">10.1093/oso/9780190889760.001.0001</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889760/" class="ahref-uri">978-0190889760</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889777/" class="ahref-uri">978-0190889777</a></span></td>
+						<span class="td-link-expands">&boxur; <i>Part of</i> ISBN: <a rel="external" target="_blank" href="https://www.worldcat.org/isbn/978-0190889777/" class="ahref-uri">978-0190889777</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/design/the-platform-society.html" class="path ahref-text"><i>The Platform Society</i> Diagrams</a></td>
 					<td class="td-datemodified"><span class="is-date">2018-11-02</span></td>
 					<td class="td-kind"><span class="is-emoji">&#x1f4ca;</span>Infographics</td>
@@ -320,14 +324,14 @@
 						<span class="td-link-expands">&boxvr; <i>Linked to</i> OSF DOI: <a rel="external" target="_blank" href="https://doi.org/10.17605/osf.io/47zyc" class="ahref-uri">10.17605/osf.io/47zyc</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Funded by</i> Grant &numero;: <a rel="external" target="_blank" href="https://gepris.dfg.de/gepris/projekt/262513311" class="ahref-uri">262513311</a><br /></span>
 						<span class="td-link-expands">&boxvr; <i>Version of</i> DOI: <a rel="external" target="_blank" href="https://doi.org/10.1080/24701475.2019.1593667" class="ahref-uri">10.1080/24701475.2019.1593667</a><br /></span>
-						<span class="td-link-expands">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a></span></td>
+						<span class="td-link-expands td-link-expands-is-reference">&boxur; <i>Cited by</i> SERP: <a rel="external" target="_blank" href="https://scholar.google.com/scholar?cites=12925179028009305858" class="ahref-text">scholar.google.com</a><br /></span></td>
 					<td class="td-description"><a rel="internal" href="/research/the-political-economy-of-social-data.html" class="path ahref-text">The Political Economy of Social Data</a></td>
 					<td class="td-datemodified"><span class="is-date">2017-07-28</span></td>
 					<td class="td-kind"><span class="is-emoji" title="&#x1f50d; Refereed">&#x1f4c4; &#x1f50d;</span>Conference Proceeding</td>
 					<td class="td-access"><span class="is-emoji">&#x1f512;</span>Closed</td>
 				</tr>
 				<tr class="tr-item y2016">
-					<td class="td-icon"></td>
+					<td class="td-icon">&rarrhk;</td>
 					<td class="td-link"><a rel="external" target="_blank" href="http://blogs.oii.ox.ac.uk/ipp-conference/2016/programme-2016/track-c-markets-and-labour/markets-ii/anne-helmond-fernando-n-van-der-vlist.html" class="ahref-text">blogs.oii.ox.ac.uk</a></td>
 					<td class="td-description">Big Data Advertising Infrastructures</td>
 					<td class="td-datemodified"><span class="is-date">2016-09</span></td>
@@ -341,7 +345,7 @@
 
 	<footer>
 		<p class="legend">
-			<span class="legend-field">Legend:</span>
+			<span class="legend-field"><span class="legend-key">&#9679; </span>Legend:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value is-highlight"><span class="legend-key">&#9679; </span>pinned/highlight</span>
@@ -349,9 +353,16 @@
 				<span class="legend-value is-feature"><span class="legend-key">&#9679; </span>feature</span>
 				<span class="legend-value is-reference"><span class="legend-key">&#9679; </span>cite/reference</span>
 				<span class="legend-value is-visited"><span class="legend-key">&#9679; </span>visited</span>
+				<span class="legend-value is-marked"><span class="legend-key">&#9679; </span>marked</span>
 			</span>
 			&boxv;
-			<span class="legend-field">Filters:</span>
+			<span class="legend-field"><span class="legend-key">&#9681; </span>Theme:</span>
+			<small class="is-notif">&hellip;</small>
+			<span class="legend-values-expands">
+				<span class="legend-value"><input type="checkbox" id="toggleTheme" title="Toggle light/dark color scheme" /> Light</span>
+			</span>
+			&boxv;
+			<span class="legend-field"><span class="legend-key">&#9706; </span>Filters:</span>
 			<small class="is-notif">&hellip;</small>
 			<span class="legend-values-expands">
 				<span class="legend-value"><input type="checkbox" id="toggleIsUpcoming" title="Toggle upcoming items (if applicable)" /> Upcoming</span>
